--- a/app/src/main/res/layout/hotels.xml
+++ b/app/src/main/res/layout/hotels.xml
@@ -3,10 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="18dp">
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -15,14 +16,16 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/hotelsrecycalview"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:padding="8dp">
 
             </android.support.v7.widget.RecyclerView>
 
             <ScrollView
+                android:layout_weight="3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="0dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
