--- a/app/src/main/res/layout/hotels_item.xml
+++ b/app/src/main/res/layout/hotels_item.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="30dp">
+    app:cardElevation="30dp"
+    android:layout_margin="18dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +14,7 @@
         <ImageView
             android:id="@+id/hotels_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:scaleType="centerCrop"
             app:srcCompat="@mipmap/ic_launcher" />
 
